# husky-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.linux  Makefile.win  README.md  compile_flags.txt  embed_assets.py  embed_shaders.py  main.cpp  valgrind.supp
assets/: cube.gltf  stone-golem.glb
assets/objs/: stone-golem.mtl
include/: husky.h  world.h
include/common/: array.h  log.h  str.h
include/renderer/: buffer.h  camera.h  descriptors.h  draw.h  gpu_model.h  image.h  model.h  pipeline.h  render_graph.h  render_passes.h  renderer.h  swapchain.h  vk_context.h  vkb.h
render/: allocator.cpp  canvas.h  command_builder.cpp  command_builder.h  compute_pipeline.cpp  compute_pipeline.h  descriptors.cpp  descriptors.h  engine.cpp  engine.h  frames.cpp  frames.h  image.cpp  imconfig.h  pipelines.cpp  pipelines.h  swapchain.cpp  swapchain.h  vk_base.cpp  vk_base.h  window.cpp  window.h
scripts/: hexembed.c
shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  gradient2.comp  input_structures.glsl  mesh.frag  mesh.vert  pbr.frag
src/: CMakeLists.txt  linalgebra.c  linalgebra.h  loader.c  loader.h  main.c  main.cpp  renderer.c  renderer.h  util.c  util.h
src/common/: array.c  array.h  linalgebra.c  linalgebra.h  str.c  str.h  util.c  util.h
src/model/: model.c  model.h
src/render/: allocator.h  buffer.cpp  buffer.h  canvas.h  command_builder.cpp  command_builder.h  descriptors.cpp  descriptors.h  engine.cpp  engine.h  frames.cpp  graphics_pipeline.cpp  graphics_pipeline.h  image.h  immediate_command.cpp  immediate_command.h  vk_base.cpp  vk_base.h  window.cpp  window.h
src/renderer/: buffer.c  buffer.h  camera.c  command.c  command.h  descriptors.c  descriptors.h  device.c  device.h  draw.c  draw.h  gpu_model.c  gpu_model.h  image.c  image.h  material.c  material.h  model.c  model.h  pipeline.c  pipeline.h  platform.c  platform.h  render_graph.c  render_graph.h  renderer.c  renderer.h  sampler.c  sampler.h  swapchain.c  swapchain.h  vk_context.c  vkb.c  vkb.h
src/renderer/passes/: gradient.c  passes.h  pbr.c  present.c
src/scene/: camera.c  camera.h  scene.c  scene.h
src/world/: world.c
test/: test.c
